fixed gap in social media links in contact us page

--- a/src/app/contact-us/lets-connect/LetsConnect.css
+++ b/src/app/contact-us/lets-connect/LetsConnect.css
@@ -107,7 +107,7 @@ section.lets-connect-header h2 {
     display: flex;
     justify-content: center;
     align-items: center;
-    gap: 1em;
+    gap: 3em;
 }
 
 .social-media-links a {
